Storefront: Fix overflow-x-shadow.

--- a/apps/storefront/src/app/globals.css
+++ b/apps/storefront/src/app/globals.css
@@ -1,3 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+    @keyframes overflow-x-scroll-shadow {
+        from {
+            box-shadow: inset -30px 0px 25px -30px theme('colors.black / 75%');
+        }
+        to {
+            box-shadow: inset 30px 0px 25px -30px theme('colors.black / 75%');
+        }
+    }
+
+    .overflow-x-shadow {
+        overflow-x: auto;
+        animation: overflow-x-scroll-shadow linear;
+        animation-timeline: scroll(self inline);
+    }
+}
